[package]
name = "hamster"
version = "0.0.3"
authors = ["Giles Cope <gilescope@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gitlab_ci_parser = { git = "https://github.com/gilescope/gitlab-ci-parser.git", rev="877fc248d280838831ab99463b9f67a3958f625f" }
subprocess = { version="0.2", default_features=false }
tracing = "0.1"
tracing-subscriber = "0.2"
ansi_term = {version="0.12"}
shellexpand = "2.0"