[package]
name = "hamster"
version = "0.0.3"
authors = ["Giles Cope <gilescope@gmail.com>"]
edition = "2018"

description = "A local working dir runner of gitlab jobs"
readme = "README.md"
repository = "https://github.com/gilescope/hamster.git"
license = "MIT OR Apache-2.0"
keywords = ["gitlab", "runner", "ci", "local"]
categories = ["development-tools::build-utils"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gitlab_ci_parser = { version="0.0.4" }
subprocess = { version="0.2", default_features=false }
tracing = "0.1"
tracing-subscriber = "0.2"
ansi_term = {version="0.12"}
shellexpand = "2.0"
git_info = "0.1"