[package]
name = "hamster"
version = "0.0.4"
authors = ["Giles Cope <gilescope@gmail.com>"]
edition = "2018"

description = "A local working dir runner of gitlab jobs"
readme = "README.md"
repository = "https://github.com/gilescope/hamster.git"
license = "MIT OR Apache-2.0"
keywords = ["gitlab", "runner", "ci", "local"]
categories = ["development-tools::build-utils"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gitlab_ci_parser = { git="https://github.com/gilescope/gitlab-ci-parser.git", ref="4ee7aa5abc5e7a9ff2be4952d62e04fb7509b81c" }
tracing = "0.1"
tracing-subscriber = {version = "0.2", default_features=false, features=["fmt", "ansi"] }
ansi_term = {version="0.12"}
shellexpand = "2.0"
git_info = "0.1"
shlex = {git="https://github.com/fenhl/rust-shlex.git", rev="d2e5b5d68248884d5f101341af9649fe8b6629c1"}
